// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when not passed all props 1`] = `
"
  <div id=\\"userCard\\" class=\\"row align-items-center justify-content-center\\">
    <div class=\\"card col-6\\">
      <div class=\\"card-body\\">
        <div class=\\"row\\">
          <div class=\\"col-12 col-lg-8 col-md-6\\">
            <h3 class=\\"mb-0 text-truncated\\">test</h3>
            <p class=\\"lead\\"></p>
            <p>
              
            </p>
          </div>
          <div class=\\"col-12 col-lg-4 col-md-6 text-center\\">
            <img src=\\"\\" alt=\\"\\" class=\\"mx-auto rounded-circle img-fluid\\">
          </div>
          </br>
          <div class=\\"col-12 col-lg-6 text-center\\">
            <h3 class=\\"mb-0\\">0</h3>
            <small>Seguidores</small>
          </div>
          <div class=\\"col-12 col-lg-6 text-center\\">
            <h3 class=\\"mb-0\\">0</h3>
            <small>Seguidos</small>
          </div>
        </div>
      </div>
    </div>
  </div>
"
`;

exports[`renders correctly when passed all props 1`] = `
"
  <div id=\\"userCard\\" class=\\"row align-items-center justify-content-center\\">
    <div class=\\"card col-6\\">
      <div class=\\"card-body\\">
        <div class=\\"row\\">
          <div class=\\"col-12 col-lg-8 col-md-6\\">
            <h3 class=\\"mb-0 text-truncated\\">test</h3>
            <p class=\\"lead\\">test@test.com</p>
            <p>
              some bio
            </p>
          </div>
          <div class=\\"col-12 col-lg-4 col-md-6 text-center\\">
            <img src=\\"http://site.com/image.png\\" alt=\\"\\" class=\\"mx-auto rounded-circle img-fluid\\">
          </div>
          </br>
          <div class=\\"col-12 col-lg-6 text-center\\">
            <h3 class=\\"mb-0\\">0</h3>
            <small>Seguidores</small>
          </div>
          <div class=\\"col-12 col-lg-6 text-center\\">
            <h3 class=\\"mb-0\\">0</h3>
            <small>Seguidos</small>
          </div>
        </div>
      </div>
    </div>
  </div>
"
`;
